Bug 367911 - Exclamation mark in password
Summary: Exclamation mark in password
Status: RESOLVED FIXED
Alias: None
Product: Smb4k
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Reinholdt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-28 08:45 UTC by Alexander Reinholdt
Modified: 2020-02-19 06:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Reinholdt 2016-08-28 08:45:03 UTC
[Copied from SF bug tracker by Alexander Reinholdt (dustpuppy) on 2016-08-28]

Mounting a share with a password that contains an exclamation mark is not possible. After several tries, other special characters are correctly handled but not <!>. Or it could come from the combination <:!>.

Reproducible: Always
Comment 1 Alexander Reinholdt 2020-02-19 05:57:35 UTC
Git commit c0b56a05115cd220b356a4c60866d933f4c9e8ff by Alexander Reinholdt.
Committed on 19/02/2020 at 05:57.
Pushed by areinholdt into branch 'master'.

Fixed authentication problems while mounting due to special characters in the password.

M  +3    -3    helpers/smb4kmounthelper.cpp
M  +1    -1    helpers/smb4kmounthelper.h

https://commits.kde.org/smb4k/c0b56a05115cd220b356a4c60866d933f4c9e8ff
Comment 2 Alexander Reinholdt 2020-02-19 06:05:35 UTC
Git commit d0e26fc640ecbd43a05e12822c8e6e0b5252be4c by Alexander Reinholdt.
Committed on 19/02/2020 at 06:05.
Pushed by areinholdt into branch '3.0'.

Fixed authentication problems while mounting due to special characters in the password.
(cherry picked from commit c0b56a05115cd220b356a4c60866d933f4c9e8ff)

M  +3    -3    helpers/smb4kmounthelper.cpp
M  +1    -1    helpers/smb4kmounthelper.h

https://commits.kde.org/smb4k/d0e26fc640ecbd43a05e12822c8e6e0b5252be4c