Fixed authentication problems while mounting due to special characters in the password.

BUG: 367911